# ModOpt

./: .coveragerc  .gitignore  .pylintrc  .pyup.yml  .travis.yml  CONTRIBUTING.md  LICENCE.txt  MANIFEST.in  README.md  README.rst  README.txt  develop.txt  info.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help-.md  installation-issue.md
.github/workflows/: cd-build.yml  cd.yml  ci-build.yml  ci.yml  style.yml  test-docs.yml  test-python-versions.yml
doc/source/: modopt.base.rst  modopt.signal.filter.rst
docs/: requirements.txt
docs/source/: about.rst  conf.py  contributing.rst  dependencies.rst  examples.rst  index.rst  installation.rst  modopt.base.backend.rst  modopt.base.np_adjust.rst  modopt.base.observable.rst  modopt.base.rst  modopt.base.transform.rst  modopt.base.types.rst  modopt.base.wrappers.rst  modopt.image.convolve.rst  modopt.image.rst  modopt.image.stats.rst  modopt.info.rst  modopt.interface.errors.rst  modopt.interface.log.rst  modopt.interface.rst  modopt.math.angle.rst  modopt.math.convolve.rst  modopt.math.integrate.rst  modopt.math.matrix.rst  modopt.math.metrics.rst  modopt.math.rst  modopt.math.stats.rst  modopt.opt.algorithms.rst  modopt.opt.cost.rst  modopt.opt.gradient.rst  modopt.opt.linear.rst  modopt.opt.proximity.rst  modopt.opt.reweight.rst  modopt.opt.rst  modopt.plot.cost_plot.rst  modopt.plot.rst  modopt.rst  modopt.signal.filter.rst  modopt.signal.noise.rst  (+12 more)
examples/: README.rst  conftest.py  example_lasso_forward_backward.py
modopt/: __init__.py  info.py
modopt/base/: __init__.py  backend.py  np_adjust.py  observable.py  transform.py  types.py  wrappers.py
modopt/examples/: README.rst  __init__.py  conftest.py  example_lasso_forward_backward.py
modopt/image/: __init__.py  convolve.py  distort.py  quality.py  shape.py  stamp.py  stats.py
modopt/interface/: __init__.py  errors.py  log.py
modopt/math/: __init__.py  angle.py  convolve.py  integrate.py  matrix.py  metrics.py  misc.py  stats.py
modopt/opt/: __init__.py  algorithms.py  cost.py  gradient.py  linear.py  metrics.py  proximity.py  reweight.py
modopt/opt/algorithms/: __init__.py  admm.py  base.py  forward_backward.py  grad_descent.py  gradient_descent.py  pnp.py  primal_dual.py
modopt/opt/linear/: __init__.py  base.py  wavelet.py
modopt/opt/proximity/: __init__.py  base.py  classic.py  denoiser.py  norms.py  rank.py
modopt/plot/: __init__.py  cost_plot.py
modopt/signal/: __init__.py  cost.py  filter.py  gradient.py  linear.py  local_pca.py  noise.py  optimisation.py  positivity.py  proximity.py  regression.py  reweight.py  svd.py  validation.py  wavelet.py
modopt/tests/: test_algorithms.py  test_base.py  test_image.py  test_math.py  test_opt.py  test_signal.py
modopt/tests/test_helpers/: __init__.py  utils.py
src/modopt/: __init__.py
src/modopt/base/: __init__.py  backend.py  np_adjust.py  observable.py  transform.py  types.py
src/modopt/interface/: __init__.py  errors.py  log.py
src/modopt/math/: __init__.py  convolve.py  matrix.py  metrics.py  stats.py
src/modopt/opt/: __init__.py  cost.py  gradient.py  proximity.py  reweight.py
src/modopt/opt/algorithms/: __init__.py  admm.py  base.py  forward_backward.py  gradient_descent.py  primal_dual.py
src/modopt/opt/linear/: base.py  wavelet.py
src/modopt/plot/: __init__.py  cost_plot.py
src/modopt/signal/: __init__.py  filter.py  noise.py  positivity.py  svd.py  validation.py  wavelet.py
tests/: test_algorithms.py  test_base.py  test_math.py  test_opt.py  test_signal.py
tests/test_helpers/: __init__.py  utils.py
