[aliases]
test=pytest

[metadata]
description-file = README.rst

[darglint]
docstring_style = numpy

[flake8]
ignore =
  D107,
  RST304,
  W503,
  WPS204,
  WPS211,
  WPS214,
  WPS221,
  WPS230,
  WPS337,
  WPS338,
  WPS403, #Todo: Rethink no cover lines
  WPS421,
  WPS432, #Mathematical codes require "magic numbers"
  WPS433, #Todo: Rethink conditional imports
  WPS463, #Todo: Rename get_ methods
  WPS615, #Todo: Rename get_ methods
per-file-ignores =
  *__init__.py*: WPS410,WPS412
  #Todo: Rethink conditional imports
  modopt/base/observable.py: WPS420,WPS604
  #Todo: Check string for log formatting
  modopt/interface/log.py: WPS323
  #Todo: Rethink conditional imports
  modopt/math/convolve.py: WPS301,WPS420
  #Todo: Consider changing cwbReweight name
  modopt/opt/reweight.py: N801
  modopt/plot/cost_plot.py: N802,WPS301
  #Todo: Check security of using system executable call
  modopt/signal/wavelet.py: S404,S603
  modopt/tests/*.py: E731,F401,WPS301,WPS420,WPS425,WPS437,WPS604
max-cognitive-score = 20
max-local-variables = 10
max-string-usages = 10

[tool:pytest]
testpaths =
  modopt
addopts =
  --verbose
  --emoji
  --flake8
  --cov=modopt
  --cov-report=term
  --cov-report=xml
  --junitxml=pytest.xml
