[aliases]
test=pytest

[metadata]
description_file = README.rst

[darglint]
docstring_style = numpy
strictness = short

[flake8]
ignore =
  D107,   #Justification: Don't need docstring for __init__ in numpydoc style
  RST304, #Justification: Need to use :cite: role for citations
  RST210, #Justification: RST210, RST213 Inconsistent with numpydoc
  RST213, #               documentation for handling *args and **kwargs
  W503,   #Justification: Have to choose one multiline operator format
  WPS202, #Todo: Rethink module size, possibly split large modules
  WPS337, #Todo: Consider simplifying multiline conditions.
  WPS338, #Todo: Consider changing method order
  WPS403, #Todo: Rethink no cover lines
  WPS421, #Todo: Review need for print statements
  WPS432, #Justification: Mathematical codes require "magic numbers"
  WPS433, #Todo: Rethink conditional imports
  WPS463, #Todo: Rename get_ methods
  WPS615, #Todo: Rename get_ methods
per-file-ignores =
  #Justification: Needed for keeping package version and current API
  *__init__.py*: F401,F403,WPS347,WPS410,WPS412
  #Todo: Rethink conditional imports
  #Todo: How can we bypass mutable constants?
  modopt/base/backend.py: WPS229, WPS420, WPS407
  #Todo: Rethink conditional imports
  modopt/base/observable.py: WPS420,WPS604
  #Todo: Check string for log formatting
  modopt/interface/log.py: WPS323
  #Todo: Rethink conditional imports
  modopt/math/convolve.py: WPS301,WPS420
  #Todo: Rethink conditional imports
  modopt/math/matrix.py: WPS420
  #Todo: import has bad parenthesis
  modopt/opt/algorithms/__init__.py: F401,F403,WPS318, WPS319, WPS412, WPS410
  #Todo: x is a too short name.
  modopt/opt/algorithms/forward_backward.py: WPS111
  #Todo: Check need for del statement
  modopt/opt/algorithms/primal_dual.py: WPS111, WPS420
  #multiline parameters bug with tuples
  modopt/opt/algorithms/gradient_descent.py: WPS111, WPS420, WPS317
  #Todo: Consider changing costObj name
  modopt/opt/cost.py: N801,
  #Todo:
  # - Rethink subscript slice assignment
  # - Reduce complexity of KSupportNorm
  # - Check bitwise operations
  modopt/opt/proximity.py: WPS220,WPS231,WPS352,WPS362,WPS465,WPS506,WPS508
  #Todo: Consider changing cwbReweight name
  modopt/opt/reweight.py: N801
  #Justification: Needed to import matplotlib.pyplot
  modopt/plot/cost_plot.py: N802,WPS301
  #Todo: Investigate possible bug in find_n_pc function
  #Todo: Investigate darglint error
  modopt/signal/svd.py: WPS345, DAR000
  #Todo: Check security of using system executable call
  modopt/signal/wavelet.py: S404,S603
  #Todo: Clean up tests
  modopt/tests/*.py: E731,F401,WPS301,WPS420,WPS425,WPS437,WPS604
  #Todo: Import has bad parenthesis
  modopt/tests/test_base.py: WPS318,WPS319,E501,WPS301
#WPS Settings
max-arguments = 25
max-attributes = 40
max-cognitive-score = 20
max-function-expressions = 20
max-line-complexity = 30
max-local-variables = 10
max-methods = 20
max-module-expressions = 20
max-string-usages = 20
max-raises = 5

[tool:pytest]
testpaths =
  modopt
addopts =
  --verbose
  --emoji
  --flake8
  --cov=modopt
  --cov-report=term
  --cov-report=xml
  --junitxml=pytest.xml

[pydocstyle]
convention=numpy
match_dir= ^(?!(docs|\.)).*
match= (?!(test_|setup)).*\.py
